WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258958
Crash in WebGLRenderingContextBase::reshape when context is lost during initialization
https://bugs.webkit.org/show_bug.cgi?id=258958
Summary
Crash in WebGLRenderingContextBase::reshape when context is lost during initi...
Dan Glastonbury
Reported
2023-07-06 19:21:48 PDT
Speculative fix for crash in WebGLRenderingContextBase::reshape
Attachments
Add attachment
proposed patch, testcase, etc.
Dan Glastonbury
Comment 1
2023-07-06 19:22:08 PDT
rdar://111695432
Dan Glastonbury
Comment 2
2023-07-06 19:46:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15621
Kimmo Kinnunen
Comment 3
2023-08-10 01:21:03 PDT
Crash in WebGLRenderingContextBase::reshape when context is lost during initialization
Kimmo Kinnunen
Comment 4
2023-08-10 01:21:21 PDT
<
rdar://111695432
>
Kimmo Kinnunen
Comment 5
2023-08-10 01:41:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16560
EWS
Comment 6
2023-08-10 18:47:40 PDT
Committed
266803@main
(807850b2a461): <
https://commits.webkit.org/266803@main
> Reviewed commits have been landed. Closing PR #16560 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug