[WebGL] Speculative fix for crash in WebGLRenderingContextBase::reshape https://bugs.webkit.org/show_bug.cgi?id=258958 rdar://111695432

Reviewed by NOBODY (OOPS!).

We are seeing invalid indexing into m_textureUnits in the wild. m_textureUnits
is validated in initializeNewContext(), so assume that m_activeTextureUnit is
invalid.

Check m_activeTextureUnit is in bounds of m_textureUnits and signal that the
context is lost for internal inconsistent state instead of crashing in Release.

* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::validateTextureStorage2DBinding):
(WebCore::WebGL2RenderingContext::validateTexture3DBinding):
(WebCore::WebGL2RenderingContext::getParameter):
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::reshape):
(WebCore::WebGLRenderingContextBase::bindTexture):
(WebCore::WebGLRenderingContextBase::getParameter):
(WebCore::WebGLRenderingContextBase::validateTextureBinding):
(WebCore::WebGLRenderingContextBase::validateTexture2DBinding):
(WebCore::WebGLRenderingContextBase::restoreCurrentTexture2D):
* Source/WebCore/html/canvas/WebGLRenderingContextBase.h:
(WebCore::WebGLRenderingContextBase::activeTextureUnitState):